Fixed otter picture and button alignment
Fixed otter picture and button alignment

--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@ body {
     text-align: center;
 }
 
+.otterContainer {
+	margin: 0 auto;
+	width: 800px; 
+}
 .otterPic {
 	float:left;
 }
